// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experiment should fail when experiment has fields missing 1`] = `
Object {
  "description": [ValidatorError: Path \`description\` is required.],
}
`;

exports[`Experiment should fail with missing props 1`] = `
Object {
  "createdBy": [ValidatorError: Path \`createdBy\` is required.],
  "description": [ValidatorError: Path \`description\` is required.],
  "name": [ValidatorError: Path \`name\` is required.],
  "slug": [ValidatorError: Path \`slug\` is required.],
  "uid": [ValidatorError: Path \`uid\` is required.],
}
`;
